# SitePipe

./: .gitignore  README.org
schema/: _build.sh  imprint.cabal  stack.yaml
schema/site/posts/: event1.md  project1.md
schema/site/templates/: foot.html  head.html  index.html  meta-list.html  meta.html  post-list.html  post.html  rss.xml
schema/src/: Avant.hs
