name:                imprint
version:             0.0.1
description:         A distributed project space for research and practice.
homepage:            Avant.org
license:             BSD3
author:              Sam Hart
maintainer:          sam.hart@avant.org
copyright:           CC
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable compile
  hs-source-dirs:      src
  main-is:             Avant.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sitepipe >= 0.1.2
                     , containers
                     , mustache
                     , text
  default-language:    Haskell2010
